<br.com.conexaozero.prafrentequeseanda_dce2105ufmg.PFALayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@android:color/black"
    android:id="@+id/layoutPrincipal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imDropArea"
        app:layout_position = "dropable"
        app:angle = "270"
        android:contentDescription="@string/pfa_botton_preto"
        android:adjustViewBounds="false"
        android:src="@drawable/pfa_bottom_preto"
        android:visibility="visible"
        android:soundEffectsEnabled="false"
        android:clickable="false" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imDCE"
        app:layout_position = "center"
        android:contentDescription="@string/pfa_botton_reestrut_dce"
        android:adjustViewBounds="false"
        android:src="@layout/layout_bt_reestrut_dce"
        android:visibility="visible"
        android:soundEffectsEnabled="false"
        android:clickable="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imAssistEstudantil"
        app:layout_position = "over_radius"
        app:angle = "330"
        android:contentDescription="@string/pfa_botton_assist_estudantil"
        android:adjustViewBounds="false"
        android:src="@layout/layout_bt_assist_estudantil"
        android:visibility="visible"
        android:soundEffectsEnabled="false"
        android:clickable="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imSeguranca"
        app:layout_position = "over_radius"
        app:angle = "210"
        android:contentDescription="@string/pfa_botton_seguranca"
        android:adjustViewBounds="false"
        android:src="@layout/layout_bt_seguranca"
        android:visibility="visible"
        android:soundEffectsEnabled="false"
        android:clickable="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imEnsinoPesquisaExtensao"
        app:layout_position = "over_radius"
        app:angle = "150"
        android:contentDescription="@string/pfa_botton_ens_pes_ext"
        android:adjustViewBounds="false"
        android:src="@layout/layout_bt_ens_pesq_ext"
        android:visibility="visible"
        android:soundEffectsEnabled="false"
        android:clickable="true" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imEsporteUiversitario"
        app:layout_position = "over_radius"
        app:angle = "90"
        android:contentDescription="@string/pfa_botton_esporte_universitario"
        android:adjustViewBounds="false"
        android:src="@layout/layout_bt_esporte_universitario"
        android:visibility="visible"
        android:soundEffectsEnabled="false"
        android:clickable="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imInstitAutonomas"
        app:layout_position = "over_radius"
        app:angle = "30"
        android:contentDescription="@string/pfa_botton_inst_autonomas"
        android:adjustViewBounds="false"
        android:src="@layout/layout_bt_inst_autonomas"
        android:visibility="visible"
        android:soundEffectsEnabled="false"
        android:clickable="true" />

</br.com.conexaozero.prafrentequeseanda_dce2105ufmg.PFALayout>
